# Real_life_RPG

./: .gitignore  Cargo.toml  README.md
real_life_rpg/: .gitignore  Cargo.toml
real_life_rpg/src/: main.rs  util.rs
real_life_rpg/src/database_logic/: database_logic.rs  mod.rs
real_life_rpg/src/main_application/: pubspec.yaml
real_life_rpg/src/main_application/android/app/: build.gradle
real_life_rpg/src/main_application/android/app/src/main/: AndroidManifest.xml
real_life_rpg/src/main_application/lib/: Message.dart  Publication.dart  User.dart  activeMemory.dart  chatPage.dart  main.dart  picturePage.dart  profilePage.dart  settingsPage.dart  signUpPage.dart  utilities.dart
real_life_rpg/src/server_logic/: friend_server_request.rs  message_server_request.rs  mod.rs  photo_server_request.rs  server_logic.rs  skill_server_request.rs  structs.rs  tests_server_logic.rs  user_server_request.rs
real_life_rpg/src/server_logic/photo_server_request/: comment_photo.rs  other_photo_things.rs
src/: data_communication.rs  main.rs
