[package]
name = "real_life_rpg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arangors = "0.5.4"
tokio = { version = "1", features = ["full"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
database = "0.5.0"
hyper = { version = "0.14.28", features = ["full"] }
warp = "0.3"
regex = "1"
bcrypt = "0.10"
image = "0.23"